[package]
name = "Mongodb"
version = "0.1.0"
authors = ["Tandoori Momos <yash20008@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"
serde_json = "1"
rpassword = "5.0.0"
colored = "2.0.0"