[package]
name = "basecamp"
version = "0.1.0"
authors = ["Tandoori Momos <yash20008@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
futures = "0.3.8"
ssh2 = "0.9.0"
cli-table = "0.4"
threadpool = "1.8.1"